<resources>
    <string name="app_name">StorySphere</string>
    <string name="log_out">Log Out</string>
    <string name="story_post">Story Post</string>
    <string name="create_story">Create Story</string>
    <string name="photo">Image Preview</string>
    <string name="description">Description</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="welcome_tagline">Kindness With StorySphere</string>
    <string name="welcome_body">Discover and Share Your Inspiring Story. Let your voice be heard, your experiences be known, and your journey be celebrated. In a world hungry for connection and authenticity, your story has the power to inspire, uplift, and unite.</string>
    <string name="password_invalid">Password must be at least 8 characters</string>
    <string name="password_invalid_messege">Password must be at least 8 characters</string>
    <string name="email_invalid_messege">Ensure the input contains both \'@\' and \'.\' characters.</string>
    <string name="signup_dialog_tittle">Welcome to StorySphere</string>
    <string name="signup_dialog_messege">You\'re officially registered! Get ready to dive into inspiring things</string>
    <string name="signup_dialog_continue">Continue</string>
    <string name="name_error">Name is required.</string>
    <string name="email_error">Email is required.</string>
    <string name="password_error">Password is required.</string>
    <string name="login_failed">Ensure your email and password correctly</string>
    <string name="invalid_content">Require to fill the image and description</string>
    <string name="login_successfully">Login successfully</string>
    <string name="hero_image">Sign In Image</string>
    <string name="signup_image">Signup Image</string>
    <string name="upload_success">Upload Successfully</string>
    <string name="upload_failed">Upload Failed</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="error_description">Required to fill the description</string>

</resources>