<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.createstory.CreateStory">

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progress_bar_story"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:visibility="visible"
        android:indeterminate="true"
        android:elevation="8dp"
        app:indicatorColor="@color/lime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:layout_margin="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/preview_image_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/photo"
            tools:srcCompat="@tools:sample/avatars"
            android:scaleType="centerCrop" />

    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:id="@+id/btn_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/materialCardView"
        app:layout_constraintStart_toStartOf="@+id/materialCardView"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView">

        <Button
            android:id="@+id/btn_camera"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_photo_camera"
            android:layout_marginEnd="12dp"
            android:text="@string/camera" />

        <Button
            android:id="@+id/btn_gallery"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_add_photo"
            android:text="@string/gallery" />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_description"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:hint="@string/description"
        android:textColorHint="@color/slate"
        app:boxStrokeColor="@color/slate"
        app:errorEnabled="true"
        app:hintTextColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/materialSwitch"
        app:layout_constraintEnd_toEndOf="@+id/btn_group"
        app:layout_constraintStart_toStartOf="@+id/btn_group"
        app:layout_constraintTop_toBottomOf="@+id/btn_group">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_add_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_upload"
        style="?attr/materialIconButtonFilledTonalStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:text="@string/upload"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/materialSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        app:thumbTint="@color/lime"
        app:thumbIcon="@drawable/ic_location"
        app:thumbIconTint="@color/material_on_surface_emphasis_high_type"
        android:text="Add Location"
        app:layout_constraintBottom_toTopOf="@+id/button_upload"
        app:layout_constraintEnd_toEndOf="@+id/button_upload" />




</androidx.constraintlayout.widget.ConstraintLayout>